2001-08-22 John R. Jackson (jrj@purdue.edu)

	* tape-src/Makefile.am: Add chown/chgrp rules for ammt/amdd install
	  so they end up like all the other Amanda programs.

2001-08-16 John R. Jackson (jrj@purdue.edu)

	* docs/Makefile.am: Fix PORTS.USAGE -> PORT.USAGE typo.

2001-08-16 John R. Jackson (jrj@purdue.edu)

	* configure.in: Change release name to "2.4.2p2-tapeio".  Add missing
	  CAM header checks from the 2.5 branch.

2001-08-15 Thomas Hepper (th@ant.han.de)
	* changer-src/chg-scsi.c. Removed version 1 DB support from mapBarCode. Changed the way parameter
	are given to MapBarCode and returned from there. No a struct is passed where all infos
	will be returned to the calling function.
	If eject is set we will not call LogSense in chg-scsi because it is also called in the
	eject function.
	* changer-src/scsi-defs.h: Added struct MBC_T used by MapBarCode.
	* changer-src/scsi-changer-driver.c: Changed all calls to MapBarCode to the new way

2001-08-14 John R. Jackson (jrj@purdue.edu)

	* docs/EXCLUDE: New document from Andrew Hall <ahall@secureworks.net>
	  describing how to set up and use GNU tar exclusions.
	* docs/Makefile.am: Added EXCLUDE and PORT.USAGE.

2001-08-14 John R. Jackson (jrj@purdue.edu)

	* docs/PORT.USAGE: New document about how Amanda ports are used.

2001-08-14 John R. Jackson (jrj@purdue.edu)

	* common-src/stream.c: Add stream_client_privileged() function to
	  get a privileged port and fail if one is not available.  The older
	  stream_client() function gets a (non-privileged) port in the
	  configured portrange, if set and possible, else anything available.
	* common-src/stream.h: Prototypes.
	* recover-src/amrecover.c: Use stream_client_privileged() instead of
	  stream_client().
	* recover-src/extract_list.c: Ditto.
	* configure.in: Added several more port range sanity checks.  Added
	  --with-tcpportrange as an alias for --with-portrange.

2001-08-09 Thomas Hepper (th@ant.han.de)